--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="theme-color" content="#5f5eaa">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="theme-color" content="#5f5eaa">
     <title>complete responsive burger website design tutorial</title>
 
     <!-- font awesome cdn link  -->
@@ -13,6 +14,8 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
+   <link rel="apple-touch-icon" href="assets/logoicon-192x192.png">
+    <link rel="manifest" href="./manifest.json" />
 
     <link rel="manifest" href="manifest.json">
 
